@@ -25,25 +25,55 @@ ThreadPoolExecutor instances are difficult to track manually. This agent automat
 Add the dependency to your `build.gradle.kts`:
 
 ```kotlin
+plugins {
+    `java`
+    application
+}
+
+repositories {
+    mavenCentral()
+}
+
+// Version of tpe-agent to use - can be overridden with -PtpeAgentVersion=x.y.z
+val AGENT_VERSION: String = project.findProperty("tpeAgentVersion") as String? ?: "0.0.16"
+
+val agentConfiguration: Configuration = 
+    configurations.create("agent").apply {
+        isCanBeConsumed = false
+        isCanBeResolved = true
+        isTransitive = false
+    }
+
 dependencies {
     // For using ThreadPoolExecutorMetrics and other classes
-    implementation("mlanett:tpe-agent:0.0.3")
+    implementation("io.github.mlanett:tpe-agent:$AGENT_VERSION")
+
+    add(agentConfiguration.name, "io.github.mlanett:tpe-agent:$AGENT_VERSION:agent@jar")
 }
 
-// For using the agent JAR with -javaagent
-val agentConfiguration: Configuration by configurations.creating {
-    isCanBeConsumed = false
-    isCanBeResolved = true
-    isTransitive = false
-}
-
-dependencies {
-    agentConfiguration("mlanett:tpe-agent:0.0.3:agent@jar")
+fun resolveAgentJar(): File {
+    return checkNotNull(agentConfiguration).singleFile
 }
 
 tasks.test {
+    useJUnitPlatform()
+    dependsOn(agentConfiguration)
+
     doFirst {
-        jvmArgs("-javaagent:${agentConfiguration.singleFile.absolutePath}")
+        val agentJar = resolveAgentJar().absolutePath
+        jvmArgs("-javaagent:$agentJar")
+        jvmArgs("-XX:+EnableDynamicAgentLoading")
+        jvmArgs("-Djdk.attach.allowAttachSelf=true")
+        jvmArgs("--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED")
+    }
+}
+
+tasks.named<JavaExec>("run") {
+    dependsOn(agentConfiguration)
+
+    doFirst {
+        val agentJar = resolveAgentJar().absolutePath
+        jvmArgs("-javaagent:$agentJar")
     }
 }
 ```
@@ -55,9 +85,9 @@ Add the dependency to your `pom.xml`:
 ```xml
 <dependencies>
     <dependency>
-        <groupId>mlanett</groupId>
+        <groupId>io.github.mlanett</groupId>
         <artifactId>tpe-agent</artifactId>
-        <version>0.0.3</version>
+        <version>0.0.16</version>
     </dependency>
 </dependencies>
 ```
@@ -73,13 +103,13 @@ There are two ways to use the agent:
 Use the `-javaagent` JVM flag to load the agent at startup. This ensures all ThreadPoolExecutors are tracked from the beginning:
 
 ```bash
-java -javaagent:/path/to/tpe-agent-0.0.3-agent.jar -jar your-application.jar
+java -javaagent:/path/to/tpe-agent-0.0.16-agent.jar -jar your-application.jar
 ```
 
 Or download from [GitHub Releases](https://github.com/mlanett/tpe-agent/releases) and use:
 
 ```bash
-java -javaagent:./tpe-agent-0.0.3-agent.jar -jar your-application.jar
+java -javaagent:./tpe-agent-0.0.16-agent.jar -jar your-application.jar
 ```
 
 #### Option 2: Programmatic Installation
@@ -98,7 +128,7 @@ public class Application {
 }
 ```
 
-**Note**: This requires Java 9+ with the `jdk.attach.allowAttachSelf` system property or the `--enable-dynamic-agent-loading` flag.
+**Note**: This requires Java 9+ with the `jdk.attach.allowAttachSelf` system property or the `-XX:+EnableDynamicAgentLoading` flag. The `-javaagent` approach (Option 1) is recommended as it's simpler and doesn't require these additional flags.
 
 ### Collecting Metrics
 
@@ -134,39 +164,191 @@ public class MonitoringService {
 }
 ```
 
-### Example with Scheduled Monitoring
+### Complete Example
+
+Here's a complete example that creates multiple thread pools and monitors them:
 
 ```java
+import mlanett.tpe_agent.ThreadPoolExecutorMetrics;
+import mlanett.tpe_agent.ThreadPoolExecutorRegistry;
+
+import java.util.Map;
+import java.util.concurrent.ArrayBlockingQueue;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.ThreadFactory;
+import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicInteger;
 
-public class Application {
-    public static void main(String[] args) {
-        ThreadPoolExecutorAgent.ensureInstalled();
-
-        // Schedule periodic monitoring
-        ScheduledExecutorService monitor = Executors.newSingleThreadScheduledExecutor();
-        monitor.scheduleAtFixedRate(() -> {
-            var snapshot = ThreadPoolExecutorRegistry.getInstance().snapshot();
-
-            snapshot.forEach((name, metrics) -> {
-                // Check for potential issues
-                if (metrics.getQueueSize() > 1000) {
-                    System.err.printf("WARNING: Large queue in %s: %d items%n",
-                        name, metrics.getQueueSize());
-                }
-                if (metrics.getPoolSize() == metrics.getMaximumPoolSize()) {
-                    System.err.printf("WARNING: Pool %s at maximum capacity%n", name);
+public class ExampleApplication {
+    
+    private static final long RUN_DURATION_SECONDS = 10;
+    private static final long REPORT_INTERVAL_SECONDS = 5;
+    
+    public static void main(String[] args) throws InterruptedException {
+        System.out.println("=== ThreadPoolExecutor Agent Example ===");
+        System.out.println("Creating thread pools and monitoring them for " + RUN_DURATION_SECONDS + " seconds...");
+        System.out.println();
+        
+        // Create several thread pools with different configurations
+        ThreadPoolExecutor fastPool = createPool("fast-pool", 2, 4);
+        ThreadPoolExecutor slowPool = createPool("slow-pool", 1, 2);
+        ThreadPoolExecutor singlePool = createPool("single-threaded", 1, 1);
+        
+        // Create a scheduled executor for periodic reporting
+        ScheduledExecutorService reporter = Executors.newSingleThreadScheduledExecutor();
+        
+        // Start periodic reporting
+        reporter.scheduleAtFixedRate(
+            () -> reportMetrics(System.currentTimeMillis()),
+            0,
+            REPORT_INTERVAL_SECONDS,
+            TimeUnit.SECONDS
+        );
+        
+        // Submit workloads to keep pools active
+        AtomicInteger taskCounter = new AtomicInteger(0);
+        
+        // Fast pool: many short tasks
+        ScheduledExecutorService fastWorkload = Executors.newSingleThreadScheduledExecutor();
+        fastWorkload.scheduleAtFixedRate(() -> {
+            fastPool.submit(() -> {
+                try {
+                    Thread.sleep(100); // Short task
+                } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
                 }
             });
-        }, 60, 60, TimeUnit.SECONDS);
-
-        // Start your application
-        startApplication();
+        }, 0, 200, TimeUnit.MILLISECONDS);
+        
+        // Slow pool: fewer longer tasks
+        ScheduledExecutorService slowWorkload = Executors.newSingleThreadScheduledExecutor();
+        slowWorkload.scheduleAtFixedRate(() -> {
+            slowPool.submit(() -> {
+                try {
+                    Thread.sleep(2000); // Longer task
+                } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                }
+            });
+        }, 0, 1500, TimeUnit.MILLISECONDS);
+        
+        // Single pool: occasional tasks
+        ScheduledExecutorService singleWorkload = Executors.newSingleThreadScheduledExecutor();
+        singleWorkload.scheduleAtFixedRate(() -> {
+            singlePool.submit(() -> {
+                try {
+                    Thread.sleep(500);
+                } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                }
+            });
+        }, 0, 1000, TimeUnit.MILLISECONDS);
+        
+        // Run for the specified duration
+        Thread.sleep(TimeUnit.SECONDS.toMillis(RUN_DURATION_SECONDS));
+        
+        // Shutdown workloads
+        fastWorkload.shutdown();
+        slowWorkload.shutdown();
+        singleWorkload.shutdown();
+        reporter.shutdown();
+        
+        // Final report
+        System.out.println();
+        System.out.println("=== Final Report ===");
+        reportMetrics(System.currentTimeMillis());
+        
+        // Shutdown pools
+        System.out.println();
+        System.out.println("Shutting down thread pools...");
+        shutdownPool("fast-pool", fastPool);
+        shutdownPool("slow-pool", slowPool);
+        shutdownPool("single-threaded", singlePool);
+        
+        System.out.println("Example completed.");
+    }
+    
+    private static ThreadPoolExecutor createPool(String name, int coreSize, int maxSize) {
+        AtomicInteger threadCounter = new AtomicInteger(0);
+        
+        ThreadFactory threadFactory = new ThreadFactory() {
+            @SuppressWarnings("unused") // Used by reflection in ThreadPoolExecutorRegistry
+            private final String namePrefix = name + "-thread-";
+            
+            @Override
+            public Thread newThread(Runnable runnable) {
+                Thread thread = new Thread(runnable, name + "-" + threadCounter.incrementAndGet());
+                thread.setDaemon(true);
+                return thread;
+            }
+        };
+        
+        return new ThreadPoolExecutor(
+            coreSize,
+            maxSize,
+            0L,
+            TimeUnit.MILLISECONDS,
+            new ArrayBlockingQueue<>(10),
+            threadFactory
+        );
+    }
+    
+    private static void reportMetrics(long timestamp) {
+        Map<String, ThreadPoolExecutorMetrics> snapshot = 
+            ThreadPoolExecutorRegistry.getInstance().snapshot();
+        
+        if (snapshot.isEmpty()) {
+            System.out.println("[" + formatTime(timestamp) + "] No thread pools discovered yet.");
+            return;
+        }
+        
+        System.out.println("[" + formatTime(timestamp) + "] Discovered " + snapshot.size() + " thread pool(s):");
+        
+        for (Map.Entry<String, ThreadPoolExecutorMetrics> entry : snapshot.entrySet()) {
+            String poolName = entry.getKey();
+            ThreadPoolExecutorMetrics metrics = entry.getValue();
+            
+            System.out.printf("  %s:\n", poolName);
+            System.out.printf("    Queue: %d | Active: %d/%d | Pool: %d (core=%d, max=%d) | Tasks: %d completed, %d total\n",
+                metrics.getQueueSize(),
+                metrics.getActiveCount(),
+                metrics.getPoolSize(),
+                metrics.getPoolSize(),
+                metrics.getCorePoolSize(),
+                metrics.getMaximumPoolSize(),
+                metrics.getCompletedTaskCount(),
+                metrics.getTaskCount()
+            );
+        }
+        System.out.println();
+    }
+    
+    private static String formatTime(long timestamp) {
+        long seconds = (timestamp / 1000) % 60;
+        long minutes = (timestamp / 60000) % 60;
+        return String.format("%02d:%02d", minutes, seconds);
+    }
+    
+    private static void shutdownPool(String name, ThreadPoolExecutor pool) {
+        pool.shutdown();
+        try {
+            if (!pool.awaitTermination(5, TimeUnit.SECONDS)) {
+                System.out.println("  " + name + ": Force shutting down...");
+                pool.shutdownNow();
+                pool.awaitTermination(5, TimeUnit.SECONDS);
+            }
+            System.out.println("  " + name + ": Shutdown complete");
+        } catch (InterruptedException e) {
+            pool.shutdownNow();
+            Thread.currentThread().interrupt();
+        }
     }
 }
 ```
+
+See the `example/` directory in this repository for the complete working example.
 
 ## API Reference
 
